# parquet-tool

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  tests.yml
examples/: generate_samples.py  orders_v1.parquet  orders_v2.parquet
scripts/: run.ps1  run.sh
src/parquet_tool/: data_model.py  file_session.py  filter_builder.py  gui_tabs.py  gui_utils.py  main.py  nested_viewer.py  parquet_backend.py  parquet_viewer.py  schema_diff.py  workers.py
tests/: conftest.py  test_data_model.py  test_gui_utils.py  test_misc.py  test_parquet_backend.py  test_schema_diff.py  test_smoke.py  test_workers.py
