[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parquet-tool"
version = "0.1.0"
description = "PyQt6 GUI for inspecting, filtering, and diffing Apache Parquet files"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Maksym Tymoshyk", email = "maksym.tymoshyk@gmail.com" }]
keywords = ["parquet", "pyarrow", "gui", "viewer", "pyqt6", "data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "PyQt6>=6.4.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "pre-commit>=3.7.0",
    "build>=1.2.0",
    "twine>=5.0.0",
]

[project.scripts]
parquet-tool = "parquet_tool.main:main"

[project.urls]
Homepage = "https://github.com/maksymtymoshyk/parquet-tool"
Issues = "https://github.com/maksymtymoshyk/parquet-tool/issues"
Changelog = "https://github.com/maksymtymoshyk/parquet-tool/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/parquet_tool"]

[tool.hatch.build.targets.sdist]
include = [
    "src/parquet_tool",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
qt_api = "pyqt6"

[tool.coverage.run]
source = ["src/parquet_tool"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]
extend-exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PL", "RUF"]
ignore = [
    "PLR0913",
    "PLR2004",
    "PLR0911",
    "PLR0912",
    "PLR0915",
    "PLC0415",
    "PLW0108",
    "RUF059",
    "SIM105",
    "SIM108",
    "B008",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101", "F401", "F841", "RUF012"]
